Mudança de layout

--- a/index.html
+++ b/index.html
@@ -12,18 +12,33 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-            <div class="navy">  
-                <a href="Home">Home</a>
-                <a href="Projetos">Projects</a>
-                <a href="Contato">Contact</a>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
     </header>
     <div class="intro">
-        <h1 class="Titulo">Hi, I'm Gabriel <br> and I'm a Devoloper
-        </h1>
-    
+        <div class="textintro">
+            <H1 class="tittleHello">HELLO</H1>
+            <h2>i'm Gabriel Fasolim</h2>
+            <h3>Dev: SQL JavaScript Python HTML CSS</h3>
+        </div>
     </div>
     
 
