--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portifolio</title>
 </head>
@@ -23,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#fade-up">Projects</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -35,10 +36,32 @@
     </header>
     <div class="intro">
         <div class="textintro">
-            <H1 class="tittleHello">HELLO</H1>
-            <h2>i'm Gabriel Fasolim</h2>
-            <h3>Dev: SQL JavaScript Python HTML CSS</h3>
+            <H1 class="responsive">HELLO</H1>
+            <h2 class="responsive">i'm Gabriel Fasolim</h2>
+            <h3 id="linguagens"class="responsive">SQL,JavaScript,Python,HTML,CSS</h3>
+            <h3 class="about">About Me</h3>
+            <p id="aboutme" class="text-center">hello my name is Gabriel Lima Fasolim <br> I'm 18 years old I study Sistemas de informação at PUCPR, <br> I'm in the second period, I'm very studious, <br> I want to enter the job market, below are some of my projects ;)</p>
         </div>
+        <div class="setascroll">
+            <h6 class="btn btn-light">learn more</h6>
+            <a href="#villaimg"><img class="seta"  src="assets/seta.png" alt=""></a>
+        </div>
+    </div>
+    
+
+    <div id="fade-up" class="projetos">
+        <H1>My Projects</H1>
+        <a href="https://gabrielfasolim.github.io/Villa-Vitoria-Web-Site/"><img id="villaimg" class="img-fluid img-thumbnail" src="assets/villa.png" alt=""></a>
+    </div>
+    <div class="contato">
+        <h1 class="tituloContato">Contact</h1>
+        <button class="botoesContato">
+            <a href="https://api.whatsapp.com/send?phone=5546991206418"><img id="imgwhats" class="img-fluid img-thumbnail" src="assets/whatsapp.jpg" alt=""></a>
+            <a href="https://www.instagram.com/gabrielfasolim/"><img id="imginsta" class="img-fluid img-thumbnail"src="assets/instagram.jpg" alt=""></a>
+            <a href="https://github.com/GabrielFasolim"><img id="imggit" class="img-fluid img-thumbnail" src="assets/github.png" alt=""></a>
+            <a href="malito:gabrielfasolim@hotmail.com subject=subject text"><img id="imgemail" class="img-fluid img-thumbnail"src="assets/email.jpg" alt=""></a>
+            <a href="https://www.linkedin.com/in/gabriel-lima-fasolim-154531235/"><img id="imglinkedin" class="img-fluid img-thumbnail"src="assets/Linkedin.jpg" alt=""></a>
+        </button>
     </div>
     
 
