alteração de fundo

--- a/index.html
+++ b/index.html
@@ -36,22 +36,26 @@
     </header>
     <div class="intro">
         <div class="textintro">
-            <H1 class="responsive">HELLO</H1>
+            <H1 class="tittlehello">HELLO</H1>
             <h2 class="responsive">i'm Gabriel Fasolim</h2>
-            <h3 id="linguagens"class="responsive">SQL,JavaScript,Python,HTML,CSS</h3>
+            <h3 id="linguagens"class="responsive">SQL, JavaScript, Python, HTML, CSS</h3>
             <h3 class="about">About Me</h3>
-            <p id="aboutme" class="text-center">hello my name is Gabriel Lima Fasolim <br> I'm 18 years old I study Sistemas de informação at PUCPR, <br> I'm in the second period, I'm very studious, <br> I want to enter the job market, below are some of my projects ;)</p>
+            <p id="aboutme" class="text-center">hello my name is Gabriel Lima Fasolim <br> I'm 18 years old I study Sistemas de informação at PUCPR, <br> I'm in the second period, I'm very excited to learn , <br> I want to enter the job market, below are some of my projects ;)</p>
         </div>
         <div class="setascroll">
             <h6 class="btn btn-light">learn more</h6>
             <a href="#villaimg"><img class="seta"  src="assets/seta.png" alt=""></a>
+            
         </div>
     </div>
     
 
     <div id="fade-up" class="projetos">
         <H1>My Projects</H1>
-        <a href="https://gabrielfasolim.github.io/Villa-Vitoria-Web-Site/"><img id="villaimg" class="img-fluid img-thumbnail" src="assets/villa.png" alt=""></a>
+        <div class="projetosicons">
+          <a href="https://gabrielfasolim.github.io/Villa-Vitoria-Web-Site/"><img id="villaimg" class="img-fluid img-thumbnail" src="assets/villa.png" alt=""></a>
+          <a href=""><img id="foodimg" class="img-fluid img-thumbnail" src="assets/Logofood.png" alt=""></a>
+        </div>
     </div>
     <div class="contato">
         <h1 class="tituloContato">Contact</h1>
