--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portifolio</title>
+    <link rel="stylesheet" href="scroll.js">
+    <title>Gabriel Fasolim</title>
 </head>
 <body>
     <header class="header">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav id="navscroll"class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#fade-up">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#contato">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -57,7 +57,7 @@
           <a href=""><img id="foodimg" class="img-fluid img-thumbnail" src="assets/Logofood.png" alt=""></a>
         </div>
     </div>
-    <div class="contato">
+    <div class="contato" id="contato">
         <h1 class="tituloContato">Contact</h1>
         <button class="botoesContato">
             <a href="https://api.whatsapp.com/send?phone=5546991206418"><img id="imgwhats" class="img-fluid img-thumbnail" src="assets/whatsapp.jpg" alt=""></a>
