--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="scroll.js">
+    <link rel="stylesheet" href="responsivo.css">
     <title>Gabriel Fasolim</title>
 </head>
 <body>
