--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </div>
 
     <div class="painel2">
+      <h1>My Profile</h1>
       <img id="foto" class="img-fluid" src="assets/foto01.jpg" alt="">
     </div>
     
