--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <div class="painel2">
       <h1>My Profile</h1>
       <img id="foto" class="img-fluid" src="assets/foto01.jpg" alt="">
+      <h4>Habilities</h4>
+      <h4>Name</h4>
+      <h4>Who I am</h4>
     </div>
     
     
