--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/inicial.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="../assets/icon2.jpg">
    
 
     <script crossorigin="anonymous"  src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js" defer></script>
@@ -42,7 +43,7 @@
           </nav>
     </header>
     <div class="painel1">
-      <h1 class='titulo'><span class="animated"> Hello, I am Gabriel Fasolim</span></h1>
+      <h1 class='titulo'><span class="animated"> Hello, I'm Gabriel Fasolim</span></h1>
       <h2 class="devtitulo">Developer</h2>
       <img  id="icon"class="img-fluid" src="../assets/icon2.jpg" alt="iconmeu">
 
@@ -57,7 +58,7 @@
       <h1 class="textprof" id="titleprof">My Profile</h1>
       <div class=" aboutme"> 
     
-        <img id="foto" class="img-fluid" src="../assets/foto01.jpg"  alt=""> <p class="textprof" id="textabout">I am a Developer, very curious, <br> very communicative and hardworking, <br> I have a great facility to work in a team, <br> Information Systems at PUCPR. <br>
+        <img id="foto" class="img-fluid" src="../assets/foto01.jpg"  alt=""> <p class="textprof" id="textabout">I'm Dev, very curious, <br> very communicative and hardworking, <br> I have a great facility to work in a team, <br> Information Systems at PUCPR. <br>
           Languages: Python | HTML5 | CSS3 | JavaScript | SQL | <br>
           Learning PHP, C#</p>
       </div>
@@ -86,6 +87,10 @@
         <div><a target="_blank" href="../pages/villa.htm"><img class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
+        <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
+      </div>
+      <div class="botao">
+        <a target="_blank" href="https://github.com/GabrielFasolim"><button class="btn fifth">Clicke Here for more Projects</button></a>
       </div>
     </div>
     <footer class="foot">
