--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -95,7 +95,7 @@
     </div>
     <footer class="foot">
       <div class="tituloContato">
-        <h1 id="contactme" class="textprof">How contact me</h1>
+        <h1 id="contactme" class="textprof">How contact me.</h1>
       </div>
       <div class="icons">
         <a target="_blank" href="https://www.instagram.com/gabrielfasolim/"><img class="iconfoot" src="../assets/instagram.jpg" alt=""></a>
