--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -84,18 +84,18 @@
     <div class="projetos" id="projetos">
       <h1 id="tituloProjetos">Projects</h1>
       <div class="boxProjetos">
-        <div><a target="_blank" href="../pages/villa.htm"><img class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
+        <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()"><a target="_blank" href="../pages/villa.htm"><img id="boximgicon" class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
-        <div><a target="_blank" href=""><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/kombat.html"><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
       </div>
       <div class="botao">
-        <a target="_blank" href="https://github.com/GabrielFasolim"><button class="btn fifth">Clicke Here for more Projects</button></a>
+        <a target="_blank" href="https://github.com/GabrielFasolim"><button class="btn fifth"> <img id="imggitbutton" src="../assets/github.png" alt=""> Clicke Here for more Projects</button></a>
       </div>
     </div>
     <footer class="foot">
       <div class="tituloContato">
-        <h1 id="contactme" class="textprof">How contact me.</h1>
+        <h1 id="contactme" class="textprof">How contact me</h1>
       </div>
       <div class="icons">
         <a target="_blank" href="https://www.instagram.com/gabrielfasolim/"><img class="iconfoot" src="../assets/instagram.jpg" alt=""></a>
@@ -112,6 +112,7 @@
     
     
 </body>
+<script src="../js/inicial.js"></script>
 <script src="/js/animacao.js" defer></script>
-    <script crossorigin="anonymous" src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
+<script crossorigin="anonymous" src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
 </html>
