--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -49,7 +49,7 @@
 
       <div class="setaanimada">
         <h5 class="botaolearn">Learn More About Me!</h5>
-        <a class="seta" href="#foto"><img class="seta"src="../assets/seta.png"></a>
+        <a class="seta" href="#foto"><img id="seta" src="../assets/seta.png"></a>
       </div>
 
     </div>
@@ -84,7 +84,7 @@
     <div class="projetos" id="projetos">
       <h1 id="tituloProjetos">Projects</h1>
       <div class="boxProjetos">
-        <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()"><a target="_blank" href="../pages/villa.htm"><img id="boximgicon" class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
+        <div id="area"><a target="_blank" href="../pages/villa.htm"><img id="boximgicon" class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/kombat.html"><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
