--- a/pages/kombat.html
+++ b/pages/kombat.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/villa.css">
+    <link rel="stylesheet" href="../css/kombat.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Bootstrap/js/bootstrap.min.js">
@@ -25,13 +25,13 @@
                     <a class="nav-link active" aria-current="page" href="../pages/inicial.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#fade-up">Projects</a>
+                    <a class="nav-link" href="../pages/inicial.html">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contato">Contact</a>
+                    <a class="nav-link" href="../pages/inicial.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Curriculum</a>
+                    <a class="nav-link" href="../pages/inicial.html">Curriculum</a>
                   </li>
                 </ul>
               </div>
@@ -42,13 +42,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/inicialvilla.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/bemvindokombat.png" height="500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/sobrevilla.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/perfilkombat.png" height="500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/sustentabilidadevilla.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/gamekombat.png" height="500" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -62,7 +62,8 @@
       <h2 class="font" id="createon">Create On</h2>
       <p class="font" id="datecreate">November,2022</p>
       <div class="buttonvilla">
-        <a target="_blank" href="https://github.com/elvisclaudino/Jogo-da-velha-KOMBAT" class="bn13">Visit GitHub Project Now</a>
+        <a target="_blank" href="https://github.com/elvisclaudino/Jogo-da-velha-KOMBAT" class="bn13"><img src="../assets/github.png" class="git" alt=""> Visit GitHub Project Now </a>
+        
       </div>
       
     </div>
