--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/villa.css">
+    <link rel="stylesheet" href="../css/portifolio.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Bootstrap/js/bootstrap.min.js">
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="../pages/inicial.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Curriculum</a>
+                    <a class="nav-link" href="../pages/inicial.html">Curriculum</a>
                   </li>
                 </ul>
               </div>
@@ -42,32 +42,30 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/inicialvilla.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/portifolioinicial.png" height="500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/sobrevilla.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/aboutme2.png" height="500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/sustentabilidadevilla.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/gamekombat.jpg" height="500" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
   </div>
   <div class=" boxcenter">
     <div class="textbox">
-      <h1 class="font" id="tittlevilla">Villa Vitoria</h1>
-      <p class="font">Website was made with pure HTML and CSS</p>
+      <h1 class="font" id="tittlevilla">Portfolio</h1>
+      <p class="font">Website was made with HTML, CSS, JS</p>
       <h2 class="font">About</h2>
-      <p class="font">Website created for Frigorífico Villa Vitória, my first freelance job</p>
+      <p class="font">Project created to show my projects and get a job</p>
       <h2 class="font" id="createon">Create On</h2>
-      <p class="font" id="datecreate">October,2022</p>
+      <p class="font" id="datecreate">December,2022</p>
       <div class="buttonvilla">
-        <a target="_blank" href="https://villavitoriacarnesnobres.netlify.app/" class="bn13">Visit Villa Now</a>
+        <a target="_blank" href="https://github.com/GabrielFasolim/MyWebpg" class="bn13"><img src="../assets/github.png" class="git" alt=""> Visit GitHub Project Now </a>
       </div>
-      
     </div>
   </div> 
-    
 </body>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
