--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -87,7 +87,7 @@
         <div id="area"><a target="_blank" href="../pages/villa.htm"><img id="boximgicon" class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
         <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/kombat.html"><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
-        <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
       </div>
       <div class="botao">
         <a target="_blank" href="https://github.com/GabrielFasolim"><button class="btn fifth"> <img id="imggitbutton" src="../assets/github.png" alt=""> Clicke Here for more Projects</button></a>
