pagina inicial responsive done

--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#contactme">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Curriculum</a>
+                    <a class="nav-link" href="../assets/Curriculo Gabriel.pdf">Curriculum</a>
                   </li>
                 </ul>
               </div>
@@ -103,6 +103,7 @@
         <a target="_blank" href=""><img class="iconfoot" src="../assets/email.jpg" alt=""></a>
         <a target="_blank" href="https://github.com/GabrielFasolim"><img class="iconfoot" src="../assets/github2.png" alt=""></a>
         <a target="_blank" href="https://www.linkedin.com/in/gabrielfasolim/"><img class="iconfoot" src="../assets/Linkedin.jpg" alt=""></a>
+        <a target="_blank" href="../assets/Curriculo Gabriel.pdf"><img class="iconfoot" src="../assets/curriculoicon.png" alt=""></a>
       </div>
       <div class="hand">
         <h5 class="textprof">Handcraft by me @gabrielfasolim</h5>
