--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -106,7 +106,7 @@
         <a target="_blank" href="../assets/Curriculo Gabriel.pdf"><img class="iconfoot" src="../assets/curriculoicon.png" alt=""></a>
       </div>
       <div class="hand">
-        <h5 class="textprof">Handcraft by me @gabrielfasolim</h5>
+        <h5 id="handcraft" class="textprof">Handcraft by me @gabrielfasolim</h5>
       </div>
     </footer>
 
