--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -85,7 +85,7 @@
       <h1 id="tituloProjetos">Projects</h1>
       <div class="boxProjetos">
         <div id="area"><a target="_blank" href="../pages/villa.htm"><img id="boximgicon" class="projetosbox" src="../assets/boxlaranja.png" alt=""></a></div>
-        <div><a target="_blank" href=""><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/foodaction.html"><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/kombat.html"><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
       </div>
