--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/inicial.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="../assets/icon2.jpg">
+    <link rel="shortcut icon" href="./assets/testeteste.png">
    
 
     <script crossorigin="anonymous"  src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js" defer></script>
