--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         <div><a target="_blank" href="../pages/foodaction.html"><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/kombat.html"><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/cronometro.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/ALURA SPA.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/aparecida.png" alt=""></a></div>
+        
       </div>
       <div class="botao">
         <a target="_blank" href="https://github.com/GabrielFasolim"><button class="btn fifth"> <img id="imggitbutton" src="../assets/github.png" alt=""> Clicke Here for more Projects</button></a>
