--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
       <div class=" aboutme"> 
     
         <img id="foto" class="img-fluid" src="../assets/foto01.jpg"  alt=""> <p class="textprof" id="textabout">I'm Dev, very curious, <br> very communicative and hardworking, <br> I have a great facility to work in a team, <br> Information Systems at PUCPR. <br>
-          Languages: Python | HTML5 | CSS3 | JavaScript | SQL | <br>
-          Learning PHP, C#</p>
+          Languages: Python | HTML5 | CSS3 | JavaScript | SQL | Java <br>
+          Learning PHP, React</p>
       </div>
       <div class="textoprofile">
         <div class="sep">
           <h4 class="textprof">Habilities</h4>
-          <p class="textprof">Python <br> CSS <br> HTML <br> SQL <br> JavaScript <br> Canva <br> Scrum <br>Vegas</p>
+          <p class="textprof">Python <br> CSS <br> HTML <br> SQL <br> JavaScript <br> Java <br> Scrum <br>React</p>
         </div>
         <div class="sep">
           <h4 class="textprof">Name</h4>
@@ -88,9 +88,9 @@
         <div><a target="_blank" href="../pages/foodaction.html"><img class="projetosbox" src="../assets/boxfood.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/kombat.html"><img class="projetosbox" src="../assets/velhabox.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/boxicon.png" alt=""></a></div>
-        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/cronometro.png" alt=""></a></div>
-        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/ALURA SPA.png" alt=""></a></div>
-        <div><a target="_blank" href="../pages/portifolio.html"><img class="projetosbox" src="../assets/aparecida.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/crononometro.html"><img class="projetosbox" src="../assets/cronometro.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/spa.html"><img class="projetosbox" src="../assets/ALURA SPA.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/aparecida.html"><img class="projetosbox" src="../assets/aparecida.png" alt=""></a></div>
         
       </div>
       <div class="botao">
