--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Bootstrap/js/bootstrap.min.js">
     <link rel="stylesheet" href="../SASS/teste.sass">
+    <link rel="shortcut icon" href="../assets/testeteste.png">
+   
     
 </head>
 <body>
