--- a/pages/crononometro.html
+++ b/pages/crononometro.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Bootstrap/js/bootstrap.min.js">
     <link rel="stylesheet" href="../SASS/teste.sass">
-    <link rel="shortcut icon" href="./assets/testeteste.png">
+    <link rel="shortcut icon" href="../assets/testeteste.png">
     
 </head>
 <body>
@@ -43,25 +43,25 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/bemvindokombat.png" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/cronometroteste.png" height="500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/perfilkombat.png" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/cronometro2.png" height="500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/gamekombat.png" height="500" class="d-block w-100" alt="...">
+            <img src="../assets/cronometro3.png" height="500" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
   </div>
   <div class=" boxcenter">
     <div class="textbox">
-      <h1 class="font" id="tittlevilla">Aparecida Nutrição</h1>
-      <p class="font">Project was made with JS</p>
+      <h1 class="font" id="tittlevilla">Cronometro</h1>
+      <p class="font">Project was made with React, SASS</p>
       <h2 class="font">About</h2>
-      <p class="font">Project created to improve my knowledge in Javascript & DOM </p>
+      <p class="font">Project created to improve my knowledge in React </p>
       <h2 class="font" id="createon">Create On</h2>
-      <p class="font" id="datecreate">March,2023</p>
+      <p class="font" id="datecreate">December,2022</p>
       <div class="buttonvilla">
         <a target="_blank" href="https://github.com/elvisclaudino/Jogo-da-velha-KOMBAT" class="bn13"><img src="../assets/github.png" class="git" alt=""> Visit GitHub Project Now </a>
         
