--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -24,16 +24,16 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../pages/inicial.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/index.html"></a>>Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/inicial.html">Projects</a>
+                    <a class="nav-link" href="/index.html"></a>>Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/inicial.html">Contact</a>
+                    <a class="nav-link" href="/index.html"></a>>Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/inicial.html">Curriculum</a>
+                    <a class="nav-link" href="/index.html"></a>>Curriculum</a>
                   </li>
                 </ul>
               </div>
