--- a/pages/villa.htm
+++ b/pages/villa.htm
@@ -23,16 +23,16 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../pages/inicial.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/inicial.html">Projects</a>
+                    <a class="nav-link" href="/index.html">Projects</a> 
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/inicial.html">Contact</a>
+                    <a class="nav-link" href="/index.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Curriculum</a>
+                    <a class="nav-link" href="/index.html">Curriculum</a>
                   </li>
                 </ul>
               </div>
