--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         <div><a target="_blank" href="../pages/crononometro.html"><img class="projetosbox" src="../assets/cronometro.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/spa.html"><img class="projetosbox" src="../assets/ALURA SPA.png" alt=""></a></div>
         <div><a target="_blank" href="../pages/aparecida.html"><img class="projetosbox" src="../assets/aparecida.png" alt=""></a></div>
-        
+        <div><a target="_blank" href="../pages/ichild.html"><img class="projetosbox" src="../assets/ichild.png" alt=""></a></div>
+        <div><a target="_blank" href="../pages/mercadaoCarne.html"><img class="projetosbox" src="../assets/mercadaocarneicon.png" alt=""></a></div>
       </div>
       <div class="botao">
         <a target="_blank" href="https://github.com/GabrielFasolim"><button class="btn fifth"> <img id="imggitbutton" src="../assets/github.png" alt=""> Clicke Here for more Projects</button></a>
