--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#contactme">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../assets/Curriculo Gabriel.pdf">Curriculum</a>
+                    <a class="nav-link" href="../assets/curriculo.pdf">Curriculum</a>
                   </li>
                 </ul>
               </div>
@@ -58,7 +58,7 @@
       <h1 class="textprof" id="titleprof">My Profile</h1>
       <div class=" aboutme"> 
     
-        <img id="foto" class="img-fluid" src="../assets/foto01.jpg"  alt=""> <p class="textprof" id="textabout">I'm Dev, very curious, <br> very communicative and hardworking, <br> I have a great facility to work in a team, <br> Information Systems at PUCPR. <br>
+        <img id="foto" class="img-fluid" src="../assets/foto01.jpg"  alt=""> <p class="textprof" id="textabout">I'm Dev, 19-year-old <br>  I am curious, communicative, <br> and hardworking, with strong teamwork skills. <br> Information Systems at PUCPR. <br>
           Languages: Python | HTML5 | CSS3 | JavaScript | SQL | Java <br>
           Learning PHP, React</p>
       </div>
